made it up to lab 1ish

--- a/Views/about.html
+++ b/Views/about.html
@@ -14,6 +14,10 @@
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
         </nav>
+
+        <p>
+            I chose video games characters because I am currently playing the witcher and wanted an excuse to use Geralt as part of the list.
+        </p>
     </div>
 </body>
 </html>
