--- a/Views/contact.html
+++ b/Views/contact.html
@@ -14,6 +14,10 @@
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
         </nav>
+        <form action="">
+            Favorite VG Character: <input type="text" name="favChar"><br>
+            <input type="submit" value="Submit">
+        </form>
     </div>
 </body>
 </html>
