--- a/Views/index.html
+++ b/Views/index.html
@@ -16,6 +16,18 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
+        <ol>
+            <li>Geralt of Rivia</li>
+            <li>Arthur Morgan</li>
+            <li>Doug Bowser</li>
+            <li>BOWSER Bowser</li>
+            <li>Mario</li>
+            <li>Pikachu</li>
+            <li>Dogmeat</li>
+            <li>Rex from Fallout NV</li>
+            <li>Courier 6</li>
+            <li>Trevor from GTA</li>
+        </ol>
         <img src="images/frog.jpg" alt="test image">
     </div>
 </body>
