Updated to Assignment 1's requirements

--- a/Views/about.html
+++ b/Views/about.html
@@ -5,19 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Static Express Server</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
     <div>
         <h1>About</h1>
         <nav>
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
+                <a href="about.html">Login</a>
+                <a href="contact.html">Add to List</a>
         </nav>
-
-        <p>
-            I chose video games characters because I am currently playing the witcher and wanted an excuse to use Geralt as part of the list.
-        </p>
+        <form action="">
+            Username: <input type="text" name="username"><br>
+            Password: <input type="text" name="password"><br>
+            <input type="submit" value="Submit">
+        </form>
+        
     </div>
 </body>
 </html>
