--- a/Views/contact.html
+++ b/Views/contact.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Static Express Server</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
     <div>
         <h1>Contact</h1>
         <nav>
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
+                <a href="about.html">Login</a>
+                <a href="contact.html">Add to List</a>
         </nav>
         <form action="">
             Favorite VG Character: <input type="text" name="favChar"><br>
