--- a/Views/index.html
+++ b/Views/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Static Express Server</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <script src="js/script.js"></script>
+    <!--<script src="js/script.js"></script>-->
 </head>
 <body>
     <div>
         <h1>Welcom 2 node land</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+            <a href="about.html">Login</a>
+            <a href="contact.html">Add to List</a>
         </nav>
         <ol>
             <li>Geralt of Rivia</li>
@@ -28,7 +28,11 @@
             <li>Courier 6</li>
             <li>Trevor from GTA</li>
         </ol>
-        <img src="images/frog.jpg" alt="test image">
+        <img src="images/geralt.png" alt="test image">
+        <p>
+            I chose video game characters because I am currently playing <br>
+            the witcher and wanted an excuse to use Geralt as part of the list.
+        </p>
     </div>
 </body>
 </html>
